# chiselcad

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  chiselcad_test.scad  vcpkg-configuration.json  vcpkg.json
.github/workflows/: ci.yml  release.yml
docs/: architecture.md  roadmap.md
src/: cli_main.cpp  main.cpp
src/app/: AppState.h  Application.cpp  Application.h  BuildStats.cpp  BuildStats.h  Config.cpp  Config.h  HeadlessBuild.cpp  HeadlessBuild.h  MeshBuilder.cpp  MeshBuilder.h
src/csg/: CsgEvaluator.cpp  CsgEvaluator.h  CsgNode.h  MeshCache.cpp  MeshCache.h  MeshEvaluator.cpp  MeshEvaluator.h  PrimitiveGen.cpp  PrimitiveGen.h
src/editor/: DiagnosticsPanel.cpp  DiagnosticsPanel.h  EditorPanel.cpp  EditorPanel.h  ExternalEditor.cpp  ExternalEditor.h  FileWatcher.h  FileWatcherInotify.cpp  FileWatcherWin32.cpp
src/export/: StlExporter.cpp  StlExporter.h
src/import/: AmfLoader.cpp  AmfLoader.h  DxfLoader.cpp  DxfLoader.h  MiniXml.cpp  MiniXml.h  NaiveLtrShaper.cpp  NaiveLtrShaper.h  OffLoader.cpp  OffLoader.h  RawPolygon2D.h  StbFontBackend.cpp  StbFontBackend.h  StlImporter.cpp  StlImporter.h  StlLoader.cpp  StlLoader.h  SurfaceLoader.cpp  SurfaceLoader.h  SvgLoader.cpp  SvgLoader.h  TextLoader.cpp  TextLoader.h  ThreeMfLoader.cpp  ThreeMfLoader.h  ZipReader.cpp  ZipReader.h  stb_image_impl.cpp  stb_truetype_impl.cpp
src/lang/: AST.h  Diagnostic.h  Expr.h  Interpreter.cpp  Interpreter.h  Lexer.cpp  Lexer.h  Parser.cpp  Parser.h  SourceLoader.cpp  SourceLoader.h  Token.h  Value.h
src/render/: Camera.cpp  Camera.h  GpuMesh.cpp  GpuMesh.h  Pipeline.cpp  Pipeline.h  RenderGraph.cpp  RenderGraph.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  Vertex.h  VmaAllocator.cpp  VmaAllocator.h  VulkanContext.cpp  VulkanContext.h
src/render/shaders/: background.frag  background.vert  grid.frag  grid.vert  mesh.frag  mesh.vert  preview.frag  preview.vert
src/util/: Debouncer.h  Log.h  PathSuffix.h  PathUtf8.h  ResourcePaths.cpp  ResourcePaths.h  ResourcePathsPosix.cpp  ResourcePathsWin32.cpp  RingBuffer.h  ThreadPool.h
tests/: 2d_extrude_test.scad  chiselcad_test.scad  expr_test.scad  for_test.scad  hull_minkowski_test.scad  if_else_test.scad  module_test.scad  sphere_only.scad  test_3mf_loader.cpp  test_amf_loader.cpp  test_csg_evaluator.cpp  test_dxf_loader.cpp  test_headless_build.cpp  test_interpreter.cpp  test_lexer.cpp  test_main.cpp  test_off_loader.cpp  test_parser.cpp  test_source_loader.cpp  test_stl_loader.cpp  test_surface_loader.cpp  test_svg_loader.cpp  test_text_loader.cpp  tier_a_test.scad  tier_b_test.scad  tier_c_test.scad
tests/fixtures/cycle/: a.scad  b.scad
tests/fixtures/diamond/: common.scad  main.scad
tests/fixtures/eval_diag/: child.scad  main.scad  main2.scad
tests/fixtures/eval_diag/sub/: lib.scad
tests/fixtures/headless/: broken.scad  cube.scad  cylinder_r1_only.scad  linear_extrude_default_height.scad  sphere_fa_coarse.scad  sphere_fa_fine.scad
tests/fixtures/import/: .stl  circle.dxf  colored.off  combined_header.off  corrupt_tricount.stl  empty.amf  empty_binary.stl  layered.dxf  malformed.off  open_only.dxf  polyline_vertex.dxf  quad.off  square.dxf  tetra.3mf  tetra.amf  tetra_stored.3mf
tests/fixtures/include_basic/: main.scad  shapes.scad
tests/fixtures/missing/: main.scad
tests/fixtures/order/: main.scad
tests/fixtures/use_basic/: lib.scad  main.scad
tests/tools/: README.md  scad_dump.cpp  scad_to_stl.cpp  stl_diff.cpp
